2004-02-03  Tim Jenness  <timj@jach.hawaii.edu>

	* stime: Tidy up. Add -epoch, -h and -man options.

	* SLA.pm (ut2lst): Tidy up.

2004-02-01  Tim Jenness  <tjenness@cpan.org>

	* t/sun67.t: Add 70 new tests based on the examples in SUN/67

2004-01-31  Tim Jenness  <tjenness@cpan.org>

	* SLA.xs: Mods for slaObs update. Added support for slaIntin

	* SLA.pm (slaObs): Can now be called with a constant string as
	second argument. [also modified slaObs.t to match]

2003-10-22  Tim Jenness  <timj@jach.hawaii.edu>

	--- VERSION 0.98 on CPAN ---

2003-09-04  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: Missed two Perl_croaks that only occur when linking
	against the C version of SLA.

2003-08-18  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Release Version 0.97 on CPAN

2003-07-14  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: Need to add aTHX_ for Perl_croak to work with threads

2003-07-03  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: Fix error in slaOap fortran interface. This was breaking
	the comet test. Does not affect the C version.

2003-07-02  Tim Jenness  <timj@jach.hawaii.edu>

	* t/comet.t: Add a test for perturbation of orbital elements since
	that is key functionality for some users.

2002-09-15  Tim Jenness  <timj@jach.hawaii.edu>

	--- VERSION 0.96 on CPAN ---
	
	* SLA.pm: Announce Fortran version support in documentation

2002-09-15  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* SLA.xs: Add full support for Fortran version of SLALIB

2002-08-15  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* SLA.xs: Fix argument list for slaOap
	

2002-08-11  Tim Jenness  <t.jenness@jach.hawaii.edu>

	* SLA.xs: Add slaPertel and slaPertue

2002-05-24  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.pm: Make release 0.95

2002-04-12  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: slaPlante had wrong calling arguments

2001-04-24  Tim Jenness  <timj@jach.hawaii.edu>

	* SLA.xs: update copyright

	* MANIFEST: Add t/preces.t

	* README: Tweak for 0.94 
